[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Shaders/Shockwave.shader" type="Shader" id=3]
[ext_resource path="res://Prefabs/Combat/Damageable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Player/PlayerInput.gd" type="Script" id=5]
[ext_resource path="res://Scripts/MultipleAudioPlayer.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.4
shader_param/size = 0.0
shader_param/thickness = 0.105

[sub_resource type="Animation" id=3]
resource_name = "Shockwave"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenRenderLayer/Shockwave:material:shader_param/force")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.4, 0.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScreenRenderLayer/Shockwave:material:shader_param/size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 170, 85 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ScreenRenderLayer" type="CanvasLayer" parent="."]

[node name="Shockwave" type="ColorRect" parent="ScreenRenderLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenEffectPlayer" type="AnimationPlayer" parent="."]
anims/Shockwave = SubResource( 3 )

[node name="Damageable" parent="." instance=ExtResource( 4 )]

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="MultipleAudioPlayer" type="Node2D" parent="."]
script = ExtResource( 6 )
